# TenderLLM

./: Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
llm_bot/: __init__.py  app.py  config.py  search.py
notebooks/: llm.ipynb
